[package]
name = "avltree"
version = "0.1.0"
authors = ["myself659 <myself659@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "avltree"
path = "src/bin/bin.rs"

[dev-dependencies]
rand = "0.6.5"
itertools = "0.8.0"
quickcheck = "0.8"
quickcheck_macros = "0.8"